ingress-example.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  namespace: demo
  labels:
    app: foo
spec:
  containers:
    - name: foo-app
      image: 'docker.io/kicbase/echo-server:1.0'
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  namespace: demo
spec:
  selector:
    app: foo
  ports:
    - port: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  namespace: demo
  labels:
    app: bar
spec:
  containers:
    - name: bar-app
      image: 'docker.io/kicbase/echo-server:1.0'
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
  namespace: demo
spec:
  selector:
    app: bar
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: demo
spec:
  rules:
    - host: foobar.local
      http:
        paths:
          - pathType: Prefix
            path: /foo
            backend:
              service:
                name: foo-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /bar
            backend:
              service:
                name: bar-service
                port:
                  number: 8080
---
